# toll-calculator

./: .env  README_dev.md  docker-compose.yml
proxy/: Dockerfile  nginx.conf
toll-calculator-backend/: .dockerignore  Dockerfile  pyproject.toml
toll-calculator-backend/tests/integration_tests/: test_api.py
toll-calculator-backend/tests/lib/: test_toll_calculator.py
toll-calculator-backend/toll_calculator_backend/: main.py
toll-calculator-backend/toll_calculator_backend/config/: database.py  settings.py
toll-calculator-backend/toll_calculator_backend/lib/: generate_mock_data.py  logger.py  time_utils.py  toll_calculator.py
toll-calculator-backend/toll_calculator_backend/models/: toll_event.py
toll-calculator-backend/toll_calculator_backend/repository/: toll_repository.py
toll-calculator-backend/toll_calculator_backend/routers/: toll.py
toll-calculator-backend/toll_calculator_backend/schemas/: toll.py  vehicle.py
toll-calculator-backend/toll_calculator_backend/services/: toll_service.py
toll-calculator-frontend/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
toll-calculator-frontend/src/: main.tsx  routeTree.gen.ts  theme.ts  utils.ts
toll-calculator-frontend/src/api/: config.ts  tollService.ts
toll-calculator-frontend/src/components/: Sidebar.tsx
toll-calculator-frontend/src/routes/: __layout.tsx  __root.tsx
toll-calculator-frontend/src/routes/__layout/: index.tsx  overview.tsx  register.tsx
toll-calculator-frontend/src/types/: vehicle.ts
