[tool.poetry]
name = "toll-calculator-backend"
version = "0.1.0"
description = ""
authors = ["Sebastian Pantin Liljevall <sebastian.p.liljevall@captario.com>"]
readme = "README.md"
packages = [{include = "toll_calculator_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
holidays = "^0.59"
sqlmodel = "^0.0.22"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
extend-exclude = [".venv/"]
line-length = 120
target-version = "py311"

[toll.ruff.lint]
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
